[project]
name = "snow-cmdb-tree"
dependencies = [
  "aiodns",
  "requests"
]


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_star = "True"
float_to_top = "True"
order_by_type = "True"
dedup_headings = "True"
lines_between_types = 1
force_alphabetical_sort_within_sections = "True"
